--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,7 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
-            minifyEnabled true
+            // minifyEnabled true
             // shrinkResources true
             // useProguard true
             // proguardFiles getDefaultProguardFile(
